--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -2,10 +2,10 @@ name: Unit Tests
 on:
   push:
     paths:
-      - "*.js"
-      - "*.json"
-      - "*.yaml"
-      - "packages/**"
+      - '*.js'
+      - '*.json'
+      - '*.yaml'
+      - 'packages/**'
 
 env:
   NODE_VERSION: 20.x
@@ -23,9 +23,9 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-        name: Enable corepack
+      - name: Enable corepack
         run: corepack enable
-        
+
       - name: Get pnpm store directory
         shell: bash
         run: |
