--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -2,18 +2,17 @@ name: Acceptance tests
 on:
   push:
     paths:
-      - "*.js"
-      - "*.json"
-      - "*.yaml"
-      - "cypress/**"
-      - "packages/**"
+      - '*.js'
+      - '*.json'
+      - '*.yaml'
+      - 'cypress/**'
+      - 'packages/**'
 
 env:
   NODE_VERSION: 20.x
   CYPRESS_RETRIES: 2
 
 jobs:
-
   acceptance:
     runs-on: ubuntu-latest
     steps:
@@ -24,13 +23,8 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - uses: pnpm/action-setup@v3
-        name: Install pnpm
-        with:
-          version: 9
-          # We don't want to install until later,
-          # when the cache and Cypress are in place
-          run_install: false
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Get pnpm store directory
         shell: bash
