--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,11 +2,11 @@ name: Storybook
 on:
   push:
     paths:
-      - "*.js"
-      - "*.json"
-      - "*.yaml"
-      - "packages/**"
-      - ".github/workflows/storybook.yml"
+      - '*.js'
+      - '*.json'
+      - '*.yaml'
+      - 'packages/**'
+      - '.github/workflows/storybook.yml'
 
 env:
   NODE_VERSION: 20.x
@@ -26,13 +26,8 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - uses: pnpm/action-setup@v3
-        name: Install pnpm
-        with:
-          version: 9
-          # We don't want to install until later,
-          # when the cache and Cypress are in place
-          run_install: false
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Get pnpm store directory
         shell: bash
