--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,11 +2,11 @@ name: Storybook
 on:
   push:
     paths:
-      - '*.js'
-      - '*.json'
-      - '*.yaml'
-      - 'packages/**'
-      - '.github/workflows/storybook.yml'
+      - "*.js"
+      - "*.json"
+      - "*.yaml"
+      - "packages/**"
+      - ".github/workflows/storybook.yml"
 
 env:
   NODE_VERSION: 20.x
