--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "volto-iframe-block-dev",
+  "name": "@kitconcept/volto-iframe-block-dev",
   "version": "1.0.0-alpha.0",
-  "description": "A new add-on for Volto",
+  "description": "volto-iframe-block: Volto Add-on",
   "author": "kitconcept GmbH",
   "homepage": "https://github.com/kitconcept/volto-iframe-block",
   "license": "MIT",
@@ -13,29 +13,29 @@
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "start": "pnpm build:deps && VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto start",
+    "start": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto start",
     "start:prod": "pnpm --filter @plone/volto start:prod",
-    "build": "pnpm build:deps && VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto build",
+    "build": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto build",
     "build:deps": "pnpm --filter @plone/registry --filter @plone/components build",
-    "i18n": "pnpm --filter volto-iframe-block i18n",
+    "i18n": "pnpm --filter @kitconcept/volto-iframe-block i18n && VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto i18n",
     "test": "RAZZLE_JEST_CONFIG=$(pwd)/jest-addon.config.js pnpm --filter @plone/volto test -- --passWithNoTests",
-    "lint": "eslint --max-warnings=0 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --fix 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "VOLTOCONFIG=$(pwd)/volto.config.js eslint --max-warnings=0 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "VOLTOCONFIG=$(pwd)/volto.config.js eslint --fix 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
     "prettier": "prettier --check 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
     "prettier:fix": "prettier --write 'packages/**/src/**/*.{js,jsx,ts,tsx}' ",
     "stylelint": "stylelint 'packages/**/src/**/*.{css,scss,less}' --allow-empty-input",
     "stylelint:fix": "stylelint 'packages/**/src/**/*.{css,scss,less}' --fix --allow-empty-input",
-    "dry-release": "pnpm --filter volto-iframe-block dry-release",
-    "release": "pnpm --filter volto-iframe-block release",
-    "release-major-alpha": "pnpm --filter volto-iframe-block release-major-alpha",
-    "release-alpha": "pnpm --filter volto-iframe-block release-alpha",
-    "storybook": "pnpm build:deps && VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto storybook dev -p 6006 -c $(pwd)/.storybook",
-    "build-storybook": "pnpm build:deps && VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto build-storybook -c $(pwd)/.storybook"
+    "dry-release": "pnpm --filter @kitconcept/volto-iframe-block dry-release",
+    "release": "pnpm --filter @kitconcept/volto-iframe-block release",
+    "release-major-alpha": "pnpm --filter @kitconcept/volto-iframe-block release-major-alpha",
+    "release-alpha": "pnpm --filter @kitconcept/volto-iframe-block release-alpha",
+    "storybook": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto storybook dev -p 6006 -c $(pwd)/.storybook",
+    "storybook-build": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto build-storybook -c $(pwd)/.storybook"
   },
   "dependencies": {
     "@plone/volto": "workspace:*",
     "@plone/registry": "workspace:*",
-    "volto-iframe-block": "workspace:*"
+    "@kitconcept/volto-iframe-block": "workspace:*"
   },
   "devDependencies": {
     "mrs-developer": "^2.2.0"
