--- a/packages/volto-iframe-block/package.json
+++ b/packages/volto-iframe-block/package.json
@@ -1,9 +1,7 @@
 {
   "name": "@kitconcept/volto-iframe-block",
   "version": "1.0.0-alpha.0",
-  "description": "volto-iframe-block: Volto add-on",
-  "author": "kitconcept GmbH",
-  "homepage": "https://github.com/kitconcept/volto-iframe-block",
+  "description": "volto-iframe-block: Volto Add-on",
   "main": "src/index.js",
   "license": "MIT",
   "keywords": [
@@ -12,6 +10,8 @@
     "plone",
     "react"
   ],
+  "author": "kitconcept GmbH",
+  "homepage": "https://github.com/kitconcept/volto-iframe-block#readme",
   "repository": {
     "type": "git",
     "url": "git@github.com:kitconcept/volto-iframe-block.git"
@@ -26,13 +26,10 @@
     "release-major-alpha": "release-it major --preRelease=alpha",
     "release-alpha": "release-it --preRelease=alpha"
   },
-  "dependencies": {
-    "@plone/components": "1.7.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intl": "3.8.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@plone/scripts": "^3.6.1",
